refactor event type metadata