@@ -21,43 +21,41 @@ import java.util.List;
 import static org.eclipse.jifa.gclog.model.GCEventType.*;
 
 public class ParallelGCModel extends GenerationalGCModel {
+    private static GCCollectorType collector = GCCollectorType.PARALLEL;
 
     public ParallelGCModel() {
-        super(GCCollectorType.PARALLEL);
+        super(collector);
     }
 
-    private final static List<String> PAUSE_EVENT_NAMES = Arrays.asList(
-            YOUNG_GC.getName(),
-            FULL_GC.getName()
-    );
+    private static List<GCEventType> allEventTypes = GCModel.calcAllEventTypes(collector);
+    private static List<GCEventType> pauseEventTypes = GCModel.calcPauseEventTypes(collector);
+    private static List<GCEventType> mainPauseEventTypes = GCModel.calcMainPauseEventTypes(collector);
+    private static List<GCEventType> parentEventTypes = GCModel.calcParentEventTypes(collector);
+    private static List<GCEventType> importantEventTypes = List.of(YOUNG_GC, FULL_GC);
 
     @Override
-    protected List<String> getPauseEventNames() {
-        return PAUSE_EVENT_NAMES;
+    protected List<GCEventType> getAllEventTypes() {
+        return allEventTypes;
     }
-
-    private final static List<GCEventType> SUPPORTED_PHASE_EVENT_TYPES = Arrays.asList(
-            YOUNG_GC,
-            FULL_GC,
-            PARALLEL_PHASE_MARKING,
-            PARALLEL_PHASE_SUMMARY,
-            PARALLEL_PHASE_ADJUST_ROOTS,
-            PARALLEL_PHASE_COMPACTION,
-            PARALLEL_PHASE_POST_COMPACT
-    );
 
     @Override
-    protected List<GCEventType> getSupportedPhaseEventTypes() {
-        return SUPPORTED_PHASE_EVENT_TYPES;
+    protected List<GCEventType> getPauseEventTypes() {
+        return pauseEventTypes;
     }
-
-    private final static List<String> METADATA_EVENT_TYPES = Arrays.asList(
-            YOUNG_GC.getName(),
-            FULL_GC.getName()
-    );
 
     @Override
-    protected List<String> getMetadataEventTypes() {
-        return METADATA_EVENT_TYPES;
+    protected List<GCEventType> getMainPauseEventTypes() {
+        return mainPauseEventTypes;
     }
+
+    @Override
+    protected List<GCEventType> getImportantEventTypes() {
+        return importantEventTypes;
+    }
+
+    @Override
+    protected List<GCEventType> getParentEventTypes() {
+        return parentEventTypes;
+    }
+
 }
